--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+
+    <header>
+        <nav>
+            <h1>G3 Architects</h1>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>Login</li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
