--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <nav>
-            <h1>G3 Architects</h1>
+            <h1 class="nav-tittle">G3 Architects</h1>
             <ul>
                 <li>Home</li>
                 <li>About</li>
