--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
                 <li>Login</li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+            <h1 class="banner-tittle">Brand New <br>
+                Group of Architects 
+                </h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+            <button class="primary-btn">Explore More</button>
+        </div>
+            <img src="/images/banner.png" alt="banner" class="banner-pic">
+        </div>
     </header>
     
 </body>
