--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <!-- header start -->
     <header>
         <nav>
             <h1 class="nav-tittle">G3 Architects</h1>
@@ -30,6 +31,25 @@
             <img src="/images/banner.png" alt="banner" class="banner-pic">
         </div>
     </header>
+
+    <!-- header end -->
+
+    <main>
+
+    <section class="features">
+        <div class="feature-img">
+            <div class="feature-pic"><img src="/images/team1.png" alt="" class="f-pic"></div>
+            <div class="feature-pic"><img src="/images/team2.png" alt="" class="f-pic" ></div>
+            <div class="feature-pic"><img src="/images/team3.png" alt="" class="f-pic"></div>
+            <div class="feature-pic"><img src="/images/team4.png" alt="" class="f-pic"></div>
+        </div>
+        <div class="feature-des">
+            <h2 class="our-feature">Quick list <span class="to-our">of Our </span> <br><span class="feature-colour">Features</span> </h2>
+            <p class="our-feature-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <buttun class="primary-btn">Explore More</buttun>
+        </div>
+    </section>
     
+    </main>
 </body>
 </html>
