--- a/index.html
+++ b/index.html
@@ -44,9 +44,41 @@
             <div class="feature-pic"><img src="/images/team4.png" alt="" class="f-pic"></div>
         </div>
         <div class="feature-des">
-            <h2 class="our-feature">Quick list <span class="to-our">of Our </span> <br><span class="feature-colour">Features</span> </h2>
+            <h2 class="our-feature">Quick list <span class="black-colour">of Our </span> <br><span class="feature-colour">Features</span> </h2>
             <p class="our-feature-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <buttun class="primary-btn">Explore More</buttun>
+        </div>
+    </section>
+
+    <section class="love-features">
+        <div class="love-content-des">
+            <h2 class="black-colour ">Features you will love & enjoy</h2>
+            <p class="primary-gray ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="item-c">
+                <div class="item">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="primary-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="item">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="primary-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="item">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="primary-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="item">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="primary-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+    
+        </div>
+        <div class="love-content-p"><img src="/images/architect.png" alt="" class="love-content-pic">
+        <div class="ten-year-badge">
+            <h2>10+Year</h2>
+            <p>Experiment</p>
+        </div>
         </div>
     </section>
     
