--- a/index.html
+++ b/index.html
@@ -81,6 +81,37 @@
         </div>
         </div>
     </section>
+
+    <section>
+        <div class="fact">
+            <div>
+                <h3>Some Facts</h3>
+                <p class="fact-des">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            </div>
+            <div class="fact-items">
+                <div class="fact-item">
+                    <img src="/images/icons/ribon.png" alt="">
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="fact-item">
+                    <img src="/images//icons/projects.png" alt="">
+                    <h3>1458</h3>
+                    <p>Project Finished</p>
+                </div>
+                <div class="fact-item">
+                    <img src="/images//icons/customers.png" alt="">
+                    <h3>590</h3>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="fact-item">
+                    <img src="/images//icons/email.png" alt="">
+                    <h3>22578</h3>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </div>
+    </section>
     
     </main>
 </body>
