--- a/index.html
+++ b/index.html
@@ -114,5 +114,21 @@
     </section>
     
     </main>
+
+    <footer>
+        <div class="contact">
+            <div>
+                <h3>Our Sponspors</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            </div>
+            <div class="contact-icons">
+                <img src="/images/sponsors/spotify.png" alt="" class="contact-icon">
+                <img src="/images/sponsors/amazon.png" alt="" class="contact-icon">
+                <img src="/images/sponsors/google.png" alt="" class="contact-icon">
+                <img src="/images/sponsors/telerama.png" alt="" class="contact-icon">
+                <img src="/images/sponsors/figma.png" alt="" class="contact-icon">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
