--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                 <img src="/images/sponsors/figma.png" alt="" class="contact-icon">
             </div>
         </div>
+        <div class="rights">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 </html>
