--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3-architects-resources</title>
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
 
@@ -28,7 +28,7 @@
             <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
             <button class="primary-btn">Explore More</button>
         </div>
-            <img src="/images/banner.png" alt="banner" class="banner-pic">
+            <img src="./images/banner.png" alt="banner" class="banner-pic">
         </div>
     </header>
 
@@ -38,10 +38,10 @@
 
     <section class="features">
         <div class="feature-img">
-            <div class="feature-pic"><img src="/images/team1.png" alt="" class="f-pic"></div>
-            <div class="feature-pic"><img src="/images/team2.png" alt="" class="f-pic" ></div>
-            <div class="feature-pic"><img src="/images/team3.png" alt="" class="f-pic"></div>
-            <div class="feature-pic"><img src="/images/team4.png" alt="" class="f-pic"></div>
+            <div class="feature-pic"><img src="./images/team1.png" alt="" class="f-pic"></div>
+            <div class="feature-pic"><img src="./images/team2.png" alt="" class="f-pic" ></div>
+            <div class="feature-pic"><img src="./images/team3.png" alt="" class="f-pic"></div>
+            <div class="feature-pic"><img src="./images/team4.png" alt="" class="f-pic"></div>
         </div>
         <div class="feature-des">
             <h2 class="our-feature">Quick list <span class="black-colour">of Our </span> <br><span class="feature-colour">Features</span> </h2>
@@ -74,7 +74,7 @@
             </div>
     
         </div>
-        <div class="love-content-p"><img src="/images/architect.png" alt="" class="love-content-pic">
+        <div class="love-content-p"><img src="./images/architect.png" alt="" class="love-content-pic">
         <div class="ten-year-badge">
             <h2>10+Year</h2>
             <p>Experiment</p>
@@ -90,22 +90,22 @@
             </div>
             <div class="fact-items">
                 <div class="fact-item">
-                    <img src="/images/icons/ribon.png" alt="">
+                    <img src="./images/./icons/ribon.png" alt="">
                     <h3>54</h3>
                     <p>Awards Winnings</p>
                 </div>
                 <div class="fact-item">
-                    <img src="/images//icons/projects.png" alt="">
+                    <img src="./images/./icons/projects.png" alt="">
                     <h3>1458</h3>
                     <p>Project Finished</p>
                 </div>
                 <div class="fact-item">
-                    <img src="/images//icons/customers.png" alt="">
+                    <img src="./images/./icons/customers.png" alt="">
                     <h3>590</h3>
                     <p>Clients Worked</p>
                 </div>
                 <div class="fact-item">
-                    <img src="/images//icons/email.png" alt="">
+                    <img src="./images/./icons/email.png" alt="">
                     <h3>22578</h3>
                     <p>Email Send</p>
                 </div>
@@ -122,11 +122,11 @@
                 <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
             </div>
             <div class="contact-icons">
-                <img src="/images/sponsors/spotify.png" alt="" class="contact-icon">
-                <img src="/images/sponsors/amazon.png" alt="" class="contact-icon">
-                <img src="/images/sponsors/google.png" alt="" class="contact-icon">
-                <img src="/images/sponsors/telerama.png" alt="" class="contact-icon">
-                <img src="/images/sponsors/figma.png" alt="" class="contact-icon">
+                <img src="./images/./sponsors/spotify.png" alt="" class="contact-icon">
+                <img src="./images/./sponsors/amazon.png" alt="" class="contact-icon">
+                <img src="./images/./sponsors/google.png" alt="" class="contact-icon">
+                <img src="./images/./sponsors/telerama.png" alt="" class="contact-icon">
+                <img src="./images/./sponsors/figma.png" alt="" class="contact-icon">
             </div>
         </div>
         <div class="rights">
